apps/stars/policies/allow-client-to-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-client
  namespace: stars
spec:
  podSelector:
    matchLabels:
      role: frontend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: client
    ports:
    - port: 80
